<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.viewpagertext.views.LeadTextView
        android:id="@+id/my_text_view"
        android:text="@string/StartWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="#212121"
        android:textSize="50sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="bottom|center_horizontal">


        <ImageView
            android:id="@+id/wanIv"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:src="@mipmap/bytemusic" />

        <TextView
            android:id="@+id/wanTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/dp_7"
            android:layout_toEndOf="@+id/wanIv"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wanTv"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_toEndOf="@+id/wanIv"
            android:text="@string/StartWelcome"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>
</RelativeLayout>
