<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/stroke_radius">

    <!--头部-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:orientation="horizontal">
        <com.viewpagertext.views.MyRoundedImageView
            android:id="@+id/localDialogIcon"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_15"
            app:riv_corner_radius="10dp"
            android:src="@mipmap/a"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/TextView_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/LocalMusicDialogSong"/>
            <TextView
                android:id="@+id/dialog_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/TextView_song"
                android:textColor="@color/black"
                android:text="歌曲名"/>
            <TextView
                android:id="@+id/dialog_singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView_song"
                android:textSize="@dimen/sp_12"
                android:text="歌手"/>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_1"
        android:background="@color/gray_cc"/>

    <!--歌手-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_20"
            android:src="@mipmap/local_dialog_song"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55">

            <TextView
                android:id="@+id/TextView_song2"
                style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                android:layout_centerVertical="true"
                android:text="@string/LocalMusicDialogSinger"/>
            <TextView
                android:id="@+id/dialog_singer2"
                style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                android:layout_toRightOf="@+id/TextView_song2"
                android:layout_centerVertical="true"
                android:text="歌手"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_cc"/>
        </RelativeLayout>
    </LinearLayout>

    <!--专辑-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_20"
            android:src="@mipmap/local_dialog_album"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55">

            <TextView
                android:id="@+id/TextView_song3"
                style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                android:layout_centerVertical="true"
                android:text="@string/LocalMusicDialogAlbum"/>
            <TextView
                android:id="@+id/dialog_album"
                style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                android:layout_toRightOf="@+id/TextView_song3"
                android:layout_centerVertical="true"
                android:text="歌名"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_cc"/>
        </RelativeLayout>
    </LinearLayout>

    <!--所占空间大小-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_20"
            android:src="@mipmap/local_dialog_size"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55">

            <TextView
                android:id="@+id/TextView_song4"
                style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                android:layout_centerVertical="true"
                android:text="@string/LocalMusicDialogSize"/>
            <TextView
                android:id="@+id/dialog_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/TextView_song4"
                android:layout_centerVertical="true"
                android:text="size"/>
            <TextView
                style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                android:layout_toRightOf="@+id/dialog_size"
                android:layout_centerVertical="true"
                android:text=" M"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_cc"/>
        </RelativeLayout>
    </LinearLayout>

    <!--歌曲时长-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_20"
            android:src="@mipmap/local_dialog_time"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55">

            <TextView
                android:id="@+id/TextView_song5"
                style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                android:layout_centerVertical="true"
                android:text="@string/LocalMusicDialogSongTime"/>
            <TextView
                android:id="@+id/dialog_time"
                style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                android:layout_toRightOf="@+id/TextView_song5"
                android:layout_centerVertical="true"
                android:text="time"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_cc"/>
        </RelativeLayout>
    </LinearLayout>

    <!--分享-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_20"
            android:src="@mipmap/local_dialog_share"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55">

            <TextView
                android:id="@+id/local_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:text="@string/LocalMusicDialogShare"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_cc"/>
        </RelativeLayout>
    </LinearLayout>

    <!--删除-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_20"
            android:src="@mipmap/local_dialog_delete"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55">

            <TextView
                android:id="@+id/local_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:text="@string/LocalMusicDialogDelete"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_1"
                android:layout_alignParentBottom="true"
                android:background="@color/gray_cc"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
</layout>