<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/stroke_radius">

        <!--头部-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:orientation="horizontal">
            <com.viewpagertext.views.MyRoundedImageView
                android:id="@+id/list_DialogIcon"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:layout_margin="@dimen/dp_15"
                app:riv_corner_radius="10dp"
                android:src="@mipmap/rabbit"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/list_TextView_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/LocalMusicDialogSong"/>
                <com.viewpagertext.views.MarqueeTextView
                    android:id="@+id/list_dialog_song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/list_TextView_song"
                    style="@style/TextView"
                    android:textColor="@color/black"
                    android:text="歌曲名"/>
                <TextView
                    android:id="@+id/list_dialog_singer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/list_TextView_song"
                    style="@style/TextView"
                    android:textSize="@dimen/sp_12"
                    android:text="歌手"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_1"
            android:background="@color/gray_cc"/>

        <!--歌手-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dp_20"
                android:src="@mipmap/local_dialog_song"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55">

                <TextView
                    android:id="@+id/TextView_song2"
                    style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                    android:layout_centerVertical="true"
                    android:text="@string/LocalMusicDialogSinger"/>
                <com.viewpagertext.views.MarqueeTextView
                    android:id="@+id/list_dialog_singer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextView"
                    android:layout_toRightOf="@+id/TextView_song2"
                    android:layout_centerVertical="true"
                    android:text="歌手"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_cc"/>
            </RelativeLayout>
        </LinearLayout>

        <!--专辑-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dp_20"
                android:src="@mipmap/local_dialog_album"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55">

                <TextView
                    android:id="@+id/TextView_song3"
                    style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                    android:layout_centerVertical="true"
                    android:text="@string/LocalMusicDialogAlbum"/>
                <com.viewpagertext.views.MarqueeTextView
                    android:id="@+id/list_dialog_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextView"
                    android:layout_toRightOf="@+id/TextView_song3"
                    android:layout_centerVertical="true"
                    android:text="歌名"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_cc"/>
            </RelativeLayout>
        </LinearLayout>

        <!--歌曲时长-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dp_20"
                android:src="@mipmap/local_dialog_time"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55">

                <TextView
                    android:id="@+id/TextView_song5"
                    style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                    android:layout_centerVertical="true"
                    android:text="@string/LocalMusicDialogSongTime"/>
                <TextView
                    android:id="@+id/list_dialog_time"
                    style="@style/LocalMusicButtonSheetDialogTextWidthHeight"
                    android:layout_toRightOf="@+id/TextView_song5"
                    android:layout_centerVertical="true"
                    android:text="time"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_cc"/>
            </RelativeLayout>
        </LinearLayout>

        <!--分享-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dp_20"
                android:src="@mipmap/local_dialog_share"/>
            <RelativeLayout
                android:id="@+id/shareMusic"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55">

                <TextView
                    android:id="@+id/list_share"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:text="@string/LocalMusicDialogShare"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_cc"/>
            </RelativeLayout>
        </LinearLayout>

        <!--&lt;!&ndash;喜欢&ndash;&gt;-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/dp_55"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:layout_width="@dimen/dp_25"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:layout_margin="@dimen/dp_20"-->
                <!--android:src="@mipmap/list_dialog_like" />-->
            <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/dp_55">-->

                <!--<TextView-->
                    <!--android:id="@+id/TextView_song4"-->
                    <!--style="@style/LocalMusicButtonSheetDialogTextWidthHeight"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:text="@string/ListMusicDialogLike"/>-->
                <!--<com.sackcentury.shinebuttonlib.ShineButton-->
                    <!--android:id="@+id/bt_heart"-->
                    <!--android:layout_width="17dp"-->
                    <!--android:layout_height="17dp"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_marginLeft="35dp"-->
                    <!--app:btn_color="@android:color/darker_gray"-->
                    <!--app:btn_fill_color="#f26d7d"-->
                    <!--app:siShape="@raw/heart"-->
                    <!--android:elevation="10dp"/>-->
                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="@dimen/dp_0_1"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:background="@color/gray_cc"/>-->
            <!--</RelativeLayout>-->
        <!--</LinearLayout>-->

        <!--删除-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dp_20"
                android:src="@mipmap/list_button_dialog_music_icon"/>
            <RelativeLayout
                android:id="@+id/NetToPlay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55">

                <TextView
                    android:id="@+id/list_play"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/ListMusicDialogPlay" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/gray_cc"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>